/**
 * 작성자명 : tlaeowls
 * 작 성 일 : 2013.12.12
 */
package com.skplanet.storeplatform.sac.client.user.vo;

/**
 * java 파일로 생성시, 사용될 java의 패키지명
 */
option java_package = "com.skplanet.storeplatform.sac.client.user.vo";

/**
 * 응답
 * 모바일 전용 회원 가입 (MDN 회원 가입)
 */
message UserJoinMdnResponseProto {

	/**
	 * 결과 코드
	 */
	required string resultCode = 1;

	/**
	 * 결과 메시지
	 */
	required string resultMessage = 2;

	/**
	 * 사용자 Key 값
	 */
	required string userKey = 3;

}